fixed welcome alignment

--- a/index.html
+++ b/index.html
@@ -46,10 +46,10 @@
                 <a href="https://www.facebook.com/drsatula" title="Facebook" target="_blank"><img class="socialMediaTag" src="images/fb.png" alt="Facebook"></a>
               </div>
               <div class="col-sm-3">
-                <a href="#" title="Google Plus" ><img class="socialMediaTag" src="images/gp.png" alt="Google Plus"></a>
+                <a href="#" title="Google Plus"><img class="socialMediaTag" src="images/gp.png" alt="Google Plus"></a>
               </div>
               <div class="col-sm-3">
-                <a href="#" title="Yelp" ><img class="socialMediaTag" src="images/yelp.png" alt="Yelp"></a>
+                <a href="#" title="Yelp"><img class="socialMediaTag" src="images/yelp.png" alt="Yelp"></a>
               </div>
             </div>
           </div>
@@ -126,40 +126,49 @@
       <div class="col-sm-9 grey">
         <div class="row">
           <div id="satulaImg" class="col-xs-12 col-sm-4 drBackground move-left">
-            <img class="img-responsive" src="images/drkatie.jpg" alt="Card image cap">
+            <img class="img-responsive" src="images/drkatie.jpg" alt="Dr Katie">
           </div>
           <div class="col-xs-12 col-sm-8">
             <h3>Meet Dr. Katie A. Satula</h3>
-            <p class="card-text">Dr. Katie A. Satula has deep roots in the local community. She graduated from Muskego High School, then attended Carthage College in Kenosha, earning bachelor’s degrees in biology and neuroscience. While attending college, she volunteered in dental clinics in Nicaragua, Jamaica, and the local community. That volunteer work confirmed her desire to pursue a career in dentistry, using her talents and passions to help others. Dr. Satula earned her Doctor of Dental Surgery (D.D.S.) degree from the Marquette University School of Dentistry.
+            <p class="card-text">Dr. Katie A. Satula has deep roots in the local community. She graduated from Muskego High School, then attended Carthage College in Kenosha, earning bachelor’s degrees in biology and neuroscience. While attending college, she volunteered
+              in dental clinics in Nicaragua, Jamaica, and the local community. That volunteer work confirmed her desire to pursue a career in dentistry, using her talents and passions to help others. Dr. Satula earned her Doctor of Dental Surgery (D.D.S.)
+              degree from the Marquette University School of Dentistry.
 
-              <br><br> Dr. Satula began her career practicing dentistry in Greenfield and recently purchased the practice of Dr. Thomas Raimann in June 2017. She looks forward to continuing the tradition of high-quality dental care that Dr. Raimann began over 30 years ago. Dr. Satula loves working with patients of all ages and prides herself on providing caring, comfortable, and comprehensive dental care to all of her patients.
+              <br><br> Dr. Satula began her career practicing dentistry in Greenfield and recently purchased the practice of Dr. Thomas Raimann in June 2017. She looks forward to continuing the tradition of high-quality dental care that Dr. Raimann began
+              over 30 years ago. Dr. Satula loves working with patients of all ages and prides herself on providing caring, comfortable, and comprehensive dental care to all of her patients.
 
               <br><br> Dr. Satula enjoys spending free time with her husband, Steve, and their friends and family. She also enjoys cooking, reading, and cheering on all of the great Wisconsin sports teams. </div>
         </div>
-
       </div>
     </div>
+
     <div class="row">
       <div class="col-sm-2"></div>
       <div class="col-sm-9 grey border">
-    <div class="row">
-      <div  id="muellerImg" class="col-xs-12 col-sm-4 col-sm-push-8 col-xl-push-9 drBackground ">
-        <img  class="img-responsive move-right" src="images/drrichard.jpg" alt="Card image cap">
-      </div>
-      <div class="col-xs-12 col-sm-8 col-sm-pull-4">
-        <h3>Meet Dr. Richard A. Mueller</h3>
-        <p class="card-text">In private practice for over 35 years, Dr. Richard A. Mueller is a seasoned dentist committed to offering the highest level of patient care. With both an undergraduate degree in biology and his Doctor of Dental Surgery (D.D.S.) from Marquette University, Dr. Mueller continues to give back to his alma mater through the Marquette School of Dentistry’s mentor program.
+        <div class="row">
+          <div id="satulaImg" class="col-xs-12 col-sm-4 drBackground move-left">
+            <img class="img-responsive" src="images/drrichard.jpg" alt="Dr Richard">
+          </div>
+          <div class="col-xs-12 col-sm-8">
+            <h3>Meet Dr. Richard A. Mueller</h3>
+            <p class="card-text">In private practice for over 35 years, Dr. Richard A. Mueller is a seasoned dentist committed to offering the highest level of patient care. With both an undergraduate degree in biology and his Doctor of Dental Surgery (D.D.S.) from Marquette
+              University, Dr. Mueller continues to give back to his alma mater through the Marquette School of Dentistry’s mentor program.
 
-          <br><br> Dr. Mueller’s contributions to the dental profession have earned him distinguished honors, including fellowships in the Pierre Fauchard Academy, the American College of Dentistry, and the International College of Dentistry.
-He has held leadership positions with both the Wisconsin Dental Association (WDA) and locally with the Greater Milwaukee Dental Association. He also is a member of the American Dental Association. His commitment to serving the community is shown in volunteering his time and talents to events with the WDA’s Mission of Mercy Dental Outreach (MOM’s), Give Kids a Smile, and local Head Start screenings.
-<br>
-<br>
-Born and raised in the Milwaukee area and a resident of Hales Corners for 29 years, Dr. Mueller welcomes new patients to join his long-standing promise to offer exceptional patient care. In his free time, Dr. Mueller enjoys making memories with his family, including two grown children and a grandchild. </p>
+              <br><br> Dr. Mueller’s contributions to the dental profession have earned him distinguished honors, including fellowships in the Pierre Fauchard Academy, the American College of Dentistry, and the International College of Dentistry. He has
+              held leadership positions with both the Wisconsin Dental Association (WDA) and locally with the Greater Milwaukee Dental Association. He also is a member of the American Dental Association. His commitment to serving the community is shown
+              in volunteering his time and talents to events with the WDA’s Mission of Mercy Dental Outreach (MOM’s), Give Kids a Smile, and local Head Start screenings.
+              <br>
+              <br> Born and raised in the Milwaukee area and a resident of Hales Corners for 29 years, Dr. Mueller welcomes new patients to join his long-standing promise to offer exceptional patient care. In his free time, Dr. Mueller enjoys making memories
+              with his family, including two grown children and a grandchild. </p>
+          </div>
+        </div>
       </div>
-</div>
-</div>
     </div>
+
+
     <div class="row text-center">
+      <div class="col-sm-2"></div>
+      <div class="col-sm-9 border">
       <div class="col-xs-12 col-sm-4">
         <div class="staffContainer">
           <img src="images/person1.jpg" alt="Staff Picture" class="staffImage" style="width:100%">
@@ -234,6 +243,11 @@ Born and raised in the Milwaukee area and a resident of Hales Corners for 29 yea
       </div>
     </div>
   </div>
+  </div>
+
+
+
+
   <div id="section3" class="container-fluid primaryBackground">
     <h1 class="text-center primaryText">Services Provided</h1>
     <div class="row">
@@ -348,15 +362,17 @@ Born and raised in the Milwaukee area and a resident of Hales Corners for 29 yea
 
   <div id="section4" class="container-fluid photoContainer primaryBackground primaryText">
     <div class="row">
-      <div class="col-sm-3 hidden-xs photoDiv">
+      <div class="col-sm-2"></div>
+      <div class="col-xs-12 col-sm-8 white border">
+      <div class="col-xs-12  white col-sm-4 welcomeDiv">
+        <img class="img-responsive mainPhoto welcomePic" src="images/Couple_only.png" alt="Smiles">
       </div>
-      <div class="col-sm-4 photoDiv">
-        <img class="img-responsive mainPhoto" src="images/Couple_only.png" alt="Smiles">
+        <div class="welcomeTextDiv col-xs-12  white col-sm-6 welcomeDiv">
+        <h3 class="welcomeText ">New Patients Are Always Welcome! </h3>
       </div>
-      <div class="col-sm-4 hidden-xs photoDiv">
-        <img class="img-responsive mainPhoto" src="images/NewPatientsWelcome.jpg" alt="Smiles">
-      </div>
+
     </div>
+  </div>
 
 
     <div class="row">
@@ -372,7 +388,8 @@ Born and raised in the Milwaukee area and a resident of Hales Corners for 29 yea
         <h3>Insurance and Financials</h3>
         <hr>
         <ul>
-          <li>Our doctors accept most major dental insurance programs. We will be more than happy to submit all insurance forms for you and help you recover the most from your benefits. We will do everything we can to help you afford the treatment you need and want.</li>
+          <li>Our doctors accept most major dental insurance programs. We will be more than happy to submit all insurance forms for you and help you recover the most from your benefits. We will do everything we can to help you afford the treatment you need
+            and want.</li>
           <li>Please give our office a call to confirm our doctors are in network with your insurance provider.</li>
           <li>Forms of payment accepted by the office include check, cash, or any major credit card.</li>
         </ul>
@@ -404,10 +421,10 @@ Born and raised in the Milwaukee area and a resident of Hales Corners for 29 yea
               <a href="https://www.facebook.com/drsatula" title="Facebook" target="_blank"><img class="socialMediaTag" src="images/fb.png" alt="Facebook"></a>
             </div>
             <div class="col-xs-1 col-sm-2">
-              <a  title="Google Plus" ><img class="socialMediaTag" src="images/gp.png" alt="Google Plus"></a>
+              <a title="Google Plus"><img class="socialMediaTag" src="images/gp.png" alt="Google Plus"></a>
             </div>
             <div class="col-xs-1 col-sm-2">
-              <a title="Yelp" ><img class="socialMediaTag" src="images/yelp.png" alt="Yelp"></a>
+              <a title="Yelp"><img class="socialMediaTag" src="images/yelp.png" alt="Yelp"></a>
             </div>
           </div>
         </div>
@@ -462,7 +479,8 @@ Born and raised in the Milwaukee area and a resident of Hales Corners for 29 yea
           <h4 class="modal-title">Our Mission</h4>
         </div>
         <div class="modal-body">
-          <p>Drs. Satula and Mueller believe in providing affordable dental care for the entire family. From children, to adolescents, to adults and seniors, we offer patients the opportunity to create a beautiful, healthy smile with customized, compassionate dental care in a comfortable atmosphere. We are dedicated to providing you beautiful, long-lasting smiles through upholding our practice mission.</p>
+          <p>Drs. Satula and Mueller believe in providing affordable dental care for the entire family. From children, to adolescents, to adults and seniors, we offer patients the opportunity to create a beautiful, healthy smile with customized, compassionate
+            dental care in a comfortable atmosphere. We are dedicated to providing you beautiful, long-lasting smiles through upholding our practice mission.</p>
         </div>
         <div class="modal-footer">
           <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
@@ -501,7 +519,8 @@ Born and raised in the Milwaukee area and a resident of Hales Corners for 29 yea
         <div class="modal-body">
           <p>As a practice, we are true believers that preventative care and education are the keys to a lifetime of optimal dental health. That is why we focus on thorough exams – checking the overall health of your teeth and gums, performing oral cancer
             exams, and taking x- rays when necessary.  We also know that routine cleanings, flossing, sealants, and fluoride are all helpful in preventing dental disease.  Not only are we focused on the beauty of your smile, we’re also concerned about
-            your health.  A review of your medical history can help us stay informed of your overall health, any new medications, and any illnesses that may impact your dental health. In addition, at each cleaning appointment, our hygienist will go into detail to make sure you are properly educated to continue good oral habits at home.  We are also dedicated to ensuring you understand the condition of your oral health and the treatment plan options available to you for optimal dental health.</p>
+            your health.  A review of your medical history can help us stay informed of your overall health, any new medications, and any illnesses that may impact your dental health. In addition, at each cleaning appointment, our hygienist will go into
+            detail to make sure you are properly educated to continue good oral habits at home. We are also dedicated to ensuring you understand the condition of your oral health and the treatment plan options available to you for optimal dental health.</p>
         </div>
         <div class="modal-footer">
           <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
